# codex-piano-vst3

./: CMakeLists.txt  README.md
.github/workflows/: windows-release.yml
Assets/: placeholder.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: package_linux_tar.sh  package_macos_dmg.sh  package_windows_zip.ps1
